<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="cn.ahabox.activity.RecipientInfoActivity">

    <include layout="@layout/mycustomactionbar"
        android:id="@+id/recipientinfo_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/recipientinfo_header">

        <include layout="@layout/horizontalline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_address"
            android:background="@drawable/edittext_blackbg_shape"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="@color/white"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            tools:targetApi="ice_cream_sandwich">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/recipient_name"/>

            <TextView
                android:id="@+id/tv_recipientinfo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="张琼"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/recipient_phone"/>

            <TextView
                android:id="@+id/tv_recipientinfo_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="13718078273"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:text="@string/recipient_zipcode"/>

            <TextView
                android:id="@+id/tv_recipientinfo_zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="100020"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="13sp"
                android:text="@string/recipient_recieveaddress"/>

            <TextView
                android:id="@+id/tv_recipientinfo_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="北京市，朝阳区；望京东路8号锐创国际中心a座19层非礼物"/>


        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_blackbg_shape"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="12dp"
            android:textSize="13sp"
            android:text="@string/delivery_time"/>

        <RadioGroup
            android:id="@+id/rg_recipientinfo_shiptime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/workday_weekend"
                android:button="@drawable/deliverytime_selector"
                android:background="@drawable/recipient_time_top"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/only_workday"
                android:button="@drawable/deliverytime_selector"
                android:background="@drawable/recipient_time_middle"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/only_weekend"
                android:button="@drawable/deliverytime_selector"
                android:background="@drawable/recipient_time_bottom"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_recipientinfo_confirm"
        style="@style/btn_nextstyle"
        android:text="@string/determine"/>
</RelativeLayout>
