<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_writeadd_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/other_write_address"
            android:textColor="@color/text_red"
            android:background="@drawable/record_btnshape"
            android:drawableRight="@mipmap/ic_enter"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3dp"
            android:text="@string/other_write_tip"/>

        <TextView
            android:id="@+id/tv_writeadd_myself"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/myself_write_address"
            android:drawableRight="@mipmap/ic_enter"
            android:textColor="@color/text_red"
            android:background="@drawable/record_btnshape"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3dp"
            android:text="@string/myself_write_tip"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_writeadd_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:text="@string/dialog_cancel"
        android:background="@drawable/tv_round"/>

</RelativeLayout>