<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="cn.ahabox.activity.SuccessfulPayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <include layout="@layout/mycustomactionbar"
            android:id="@+id/successfulpay_header"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <include layout="@layout/product_info"/>

        <include layout="@layout/content_seperater"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payfinished"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/text_red"
            android:padding="38dp"/>

        <include layout="@layout/content_seperater"/>

        <TextView
            style="@style/text_basestyle"
            android:text="@string/wenxintip2"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payfinishedtip"
            android:lineSpacingExtra="9dp"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_successful_next"
        style="@style/btn_nextstyle"
        android:text="@string/nextstep" />

</RelativeLayout>
