<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_margin="18dp"
    tools:targetApi="ice_cream_sandwich">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipient_name"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_orderdetail_addrename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="无"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recipient_phone"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_orderdetail_addrephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="无"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="@string/recipient_zipcode"/>

    <TextView
        android:id="@+id/tv_orderdetail_addrezipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="无"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="@string/recipient_recieveaddress"/>

    <TextView
        android:id="@+id/tv_orderdetail_addreadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="无"/>

</GridLayout>