<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shiptime_tip"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/ib_shiptime_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_close"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <include layout="@layout/horizontalline"/>

    <TextView
        android:id="@+id/tv_shiptime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:padding="18dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_num"
            android:layout_marginRight="5dp"/>

        <include layout="@layout/plus_reduce"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_shiptime_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_shiptime_sendself"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/pressed_black_selector"
            android:text="@string/productdetail_sendself"/>

        <TextView
            android:id="@+id/tv_shiptime_sendta"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_marginLeft="0.5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/pressed_black_selector"
            android:text="@string/productdetail_sendta"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_shiptime_addto"
        style="@style/btn_nextstyle_black"
        android:text="@string/addto_shopcart"
        android:layout_marginTop="20dp" />

</LinearLayout>