<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="cn.ahabox.activity.RecordVoiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/mycustomactionbar"
            android:id="@+id/recordvoice_header"/>

        <include layout="@layout/horizontalline"/>

            <include layout="@layout/product_info"/>

            <include layout="@layout/content_seperater"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/recordtip"/>

            <include layout="@layout/horizontalline"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordtip_content"
                android:lineSpacingExtra="9dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tv_recordvoice_choose"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/choosevoice"
                android:background="@drawable/pressed_black_selector"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_recordvoice_click"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/clickvoice"
                android:background="@drawable/pressed_red_selector"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="16sp"/>
    </LinearLayout>

</RelativeLayout>
