<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/testlisen"/>

    <RelativeLayout
        android:id="@+id/tv_audio_play"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_below="@id/audio_name"
        android:paddingLeft="10dp"
        android:layout_margin="35dp"
        android:background="@drawable/edittext_redbg_shape">

            <ImageView
                android:id="@+id/iv_audio"
                android:layout_width="10dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/recordvoice"/>

            <com.ant.liao.GifView
                android:id="@+id/mygif"
                android:layout_width="10dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:visibility="gone"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_record_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordfinish"
        android:textColor="@color/text_red"
        android:background="@drawable/record_btnshape"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_record_repeate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rerecord"
        android:textColor="@color/text_red"
        android:background="@drawable/record_btnshape"
        android:layout_marginTop="16dp"
        android:textSize="18sp" />

</LinearLayout>